--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 :root {
   --background: #fafafa;
   --text: hsl(200, 15%, 8%);
-  --input: hsl(0, 0%, 52%);
+  --input: hsl(0, 0%, 100%);
   --elements: hsl(0, 0%, 100%);
 }
 [data-theme="dark"] {
@@ -20,88 +20,197 @@ body {
   background-color: var(--background);
 }
 
-header{
-    display: grid;
-    grid-template-columns: 60% 40%;
-
+header {
+  display: grid;
+  grid-template-columns: 60% 40%;
 }
 
 #main-container {
-    max-width: 1424px;
+  max-width: 1424px;
 }
 
 .title {
-    font-weight: 800;
-    font-size: 16px;
+  font-weight: 800;
+  font-size: 16px;
+  
 }
 .dark-mode {
-    text-align: right;
-    font-weight: 600;
-    cursor: pointer;
+  text-align: right;
+  font-weight: 600;
+  cursor: pointer;
+  color: var(--text);
 }
 
 .form-select {
-    width: 50%;
+  width: 50%;
+  background-color: var(--background);
+  color: var(--text);
 }
 
 select option {
-    color: var(--text);
-    font-weight: 400;
+  color: var(--text);
+  font-weight: 400;
 }
 #countries {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
-h1 a:link, h1 a:hover, h1 a:visited, h1 a:active {
-    text-decoration: none;
-    color: #000;
+h1 a:link,
+h1 a:hover,
+h1 a:visited,
+h1 a:active {
+  text-decoration: none;
+  color: var(--text);
 }
-
+.form-control {
+    background-color: var(--input);
+    color: var(--text);
+}
 .country {
-display: grid;
-background-color: var(--elements);
-cursor: pointer;
-
+  display: grid;
+  background-color: var(--elements);
+  cursor: pointer;
 }
-.country div img{
-    width:100%;
-    height: auto;
-    
+.country div img {
+  width: 100%;
+  height: auto;
 }
 
 .country-info h2 {
-font-size: 16px;
-font-weight: 700;
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--text);
 }
 .country-info p {
-    font-size: 12px;
+  font-size: 12px;
+  color: var(--text);
 }
 
 .flag {
-    min-height: 50%;
+  min-height: 50%;
 }
 
+.search-result {
+  /* grid-template-columns: repeat(auto-fit, minmax(250px, .1fr)); */
+  max-width: 250px;
+  min-height: 100vh;
+}
 .details {
-    padding-top: 2rem;
-    display: grid;
-    /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
-    grid-template-columns: repeat(auto-fit, minmax(20px, 1fr));
-    min-height:69vh;
+  padding-top: 2rem;
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
+  min-height: 69vh;
+}
+
+#details {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .detail-flag {
-    /* grid-column: 1/3; */
-    justify-self: center;
-    /* align-self: center; */
+  /* grid-column: 1/3; */
+  justify-self: center;
+  align-self: end;
+  /* align-self: center; */
+
+  
 }
 
 .detail-row {
-    display: block;
-    width: 100%;
-    
+  display: block;
+  width: 100%;
 }
 .detail-container {
-    display: grid;
-    grid-template-columns: 50% 25% 25%;
+  display: grid;
+  grid-template-columns: 50% 25% 25%;
 }
+
+.single_country {
+    padding-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/
+    grid-template-rows: 1fr 1fr;
+    min-height: 69vh;
+}
+
+.border_countries {
+  grid-row: 2/3;
+    grid-column: 1/3;
+}
+
+.detail-flag img {
+    max-width: 400px;
+}
+.detail-info {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    
+}
+
+.detail-info-right {
+    align-self: center;
+}
+.detail-info {
+    color: var(--text);
+}
+
+.btn {
+    color: var(--text);
+    background-color: var(--elements);
+}
+
+@media (min-width: 768px) {
+    .detail-flag img {
+        border: 1px solid grey;
+        
+    }
+
+    .detail-flag {
+        text-align: center;
+    }
+}
+
+@media (max-width: 768px) {
+  .border_countries {
+    grid-row: 3/4;
+      grid-column: 1/3;
+  }
+
+  .detail-info-right {
+    grid-row: 2/3;
+  }
+
+  .single_country {
+    grid-template-rows: 1fr 2fr;
+  }
+
+  .search-result {
+    max-width: 350px;
+    min-height: auto;
+  }
+}
+
+footer {
+  background-color: var(--text);
+  text-align: center;
+  max-width: 100% !important;
+  color: var(--background);
+ }
+ footer a {
+     text-decoration: none;
+     /* margin-right: 10px; */
+     width: 100%;
+     color: var(--background);
+ }
+ 
+ footer span {
+     margin: 0 4px;
+     color: var(--background);
+ }
+ footer strong {
+     margin-right: 5px;
+     color: var(--background);
+ }
